# mailtoscraper

./: .gitignore  LICENSE  README.md  project_struct  pyproject.toml  requirements.txt
src/common/models/: company_info.py  domain_email.py  email_data.py  shopify_store.py
src/email_sender/: main.py
src/email_writer/: main.py
src/mailto_scraper/: main.py
src/shopify_searcher/: README.md  main.py
tests/: test_main.py
