[tool.poetry]
name = "mailto-scraper"
version = "0.1.0"
description = "Email scraper from a list of websites"
authors = ["Pere Pasamonte <perepc@gmail.com>"]
readme = "README.md"
packages = [{include = "mailto_scraper", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.0"
email-validator = "^2.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 